visualisacion con card

--- a/newIndex/src/app/app.component.css
+++ b/newIndex/src/app/app.component.css
@@ -1,5 +1,9 @@
-body{
-  display: flex;
-  flex-direction:column;
-  justify-content: flex-start;
+*{
+  background-color: brown;
 }
+body{
+  justify-content: space-around;
+ margin-top: 0%;
+}
+
+
