--- a/newIndex/src/app/btns/botton/botton.component.html
+++ b/newIndex/src/app/btns/botton/botton.component.html
@@ -7,10 +7,10 @@
       id="{{btnc.id}}"
       href="{{btnc.href}}"
       class="{{btnc.classA}}"
-      target="blank"
+      target="{{btnc.target}}"
       >
         <img
-        class="{{btnc.class}}"
+        class="{{btnc.classB}}"
         src="{{btnc.src}}"
         alt="{{btnc.alt}}"
         >
