--- a/newIndex/src/app/btns/botton/botton.component.css
+++ b/newIndex/src/app/btns/botton/botton.component.css
@@ -3,6 +3,7 @@
   .btncs{
     display: flex;
     justify-content: space-around;
+   margin-top: 2%;
 
   }
 
@@ -17,14 +18,16 @@
     outline: none;
     height:  6vh;
     width: 4vw;
-    background-color:var(--color_header);
+    background-color:transparent;
   }
   .btn-div:hover{
    border-radius:50%;
    box-shadow: 0 20px 40px var(--color_shadow_contac_1), 0 20px 40px var(--color_shadow_contac_2) ;
    animation-name:btn-contac;
    background:var(--color_hover_contac);
-   animation-duration: 2s;
+   animation-duration: 0.5s;
+   animation-fill-mode:forwards;
+
   }
   @keyframes btn-contac {
   0% {
