--- a/newIndex/src/app/encabezados/header/header.component.html
+++ b/newIndex/src/app/encabezados/header/header.component.html
@@ -1,3 +1,4 @@
+
 <header>
  <dir class="div-img">
   <img
@@ -5,7 +6,16 @@
   src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1640653338/APLogo-20-20.png"
   alt="icono argentina programa">
  </dir>
-  <app-botton
-  class="div-btns"
-  ></app-botton>
+<app-botton class="div-btns"></app-botton>
 </header>
+
+
+  <img class="img-baner" >
+  <img class="img-foto">
+ <div class="description">
+   <h1>hola</h1>
+ </div>
+<div class="dtaP">
+  <h3>lucas lautaro ramirez</h3>
+</div>
+
