--- a/newIndex/src/app/card/card/card.component.html
+++ b/newIndex/src/app/card/card/card.component.html
@@ -3,7 +3,9 @@
       <div class="contenedor">
 
 <div class="btn">
-<app-btn-edit (thisAction)="_actionF"></app-btn-edit>
+<app-btn-edit
+click)= "closeCard(_close)"
+ ></app-btn-edit>
 </div>
 
     <a href="{{href}}" target="blank">
