cerrar card solucionado

--- a/newIndex/src/app/card/card/card.component.html
+++ b/newIndex/src/app/card/card/card.component.html
@@ -2,9 +2,9 @@
 
       <div class="contenedor">
 
-<div class="btn">
+<div class="btn" >
 <app-btn-edit
-click)= "closeCard(_close)"
+(click)="closeCard(_close)"
  ></app-btn-edit>
 </div>
 
