card-edit-css-listo-

--- a/newIndex/src/app/encabezados/body/body.component.css
+++ b/newIndex/src/app/encabezados/body/body.component.css
@@ -16,6 +16,10 @@ margin-left: 4%;
 
 }
 
+.div-card-edit{
+  display: block;
+  height: 20%;
+}
 .div_{
   height: 250vh;
   width: 100%;
@@ -24,7 +28,7 @@ margin-left: 4%;
 }
 .div-for{
  margin-top: 10%;
-  width: 90%;
+  width: 80%;
   margin-left: 2%;
 }
 app-proyectos{
